@@ -61,6 +61,7 @@ Changes:
 - Upgrade samba to 4.1.17.
 
 Fixes:
+- Remove ZFS pool cache in ZFS pool tools and sync.
 - FAT/NTFS mount does not use access restriction.
 - Broken Wireless support.
 - ZFS pool cache is not removed when deleting or reseting to factory default.
